force-app/main/default/objects/Case/fields/ISC_Link_Agent__c.field-meta.xml
<CustomField>
    <fullName>ISC_Link_Agent__c</fullName>
    <formula>HYPERLINK(SUBSTITUTE( LEFT($Api.Partner_Server_URL_490, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_490)-1) + &apos;/lightning/r/Case/&apos;+CASESAFEID(Id)+&apos;/view&apos;, &apos;my.salesforce.com&apos;, &apos;lightning.force.com&apos;), CaseNumber )</formula>
    <label>Link - Agent</label>
    <type>Text</type>
</CustomField>