force-app/main/default/objects/Case/fields/ISC_Link_Portal__c.field-meta.xml
<CustomField>
    <fullName>ISC_Link_Portal__c</fullName>
    <formula>IF( Contact.ISC_Is_Employee__c , HYPERLINK(IF(CONTAINS(LEFT($Api.Partner_Server_URL_490, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_490)-1),&apos;--&apos;), SUBSTITUTE( LEFT($Api.Partner_Server_URL_490, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_490)-1) + &apos;/ITSC/s/case/&apos; + CASESAFEID(Id) , &apos;my.salesforce.com&apos;, &apos;my.site.com&apos;),&apos;https://servicedesk.innovasolutions.com/ITSC/s/case/&apos; + CASESAFEID(Id)), CaseNumber ), CaseNumber )</formula>
    <label>Link - Portal</label>
    <type>Text</type>
</CustomField>