force-app/main/default/objects/Case/fields/ISC_Previous_Queue__c.field-meta.xml
<CustomField>
    <fullName>ISC_Previous_Queue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Previous Queue</label>
    <referenceTo>ISC_Queue_Setting__c</referenceTo>
    <relationshipLabel>Cases As Previous</relationshipLabel>
    <relationshipName>Cases_As_Previous</relationshipName>
    <type>Lookup</type>
</CustomField>