force-app/main/default/objects/Case/fields/ISC_Requestor__c.field-meta.xml
<CustomField>
    <fullName>ISC_Requestor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Requestor)</relationshipLabel>
    <relationshipName>Requestor_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>