force-app/main/default/objects/Case/fields/ISC_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>ISC_Resolution_Date__c</fullName>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>