force-app/main/default/objects/Case/fields/IsClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>IsClosedStatus__c</fullName>
    <formula>IF(ISPICKVAL(Status, &quot;Closed&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosedStatus</label>
    <type>Checkbox</type>
</CustomField>