force-app/main/default/objects/Case/fields/ITSC_Task__c.field-meta.xml
<CustomField>
    <fullName>ITSC_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITSC Task</label>
    <referenceTo>Innova_ITSC_Task__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>