force-app/main/default/objects/Case/fields/Milestone_Notification__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Notification__c</fullName>
    <label>Milestone Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Response: Warning of upcoming SLA violation</fullName>
            </value>
            <value>
                <fullName>Response: SLA violation</fullName>
            </value>
            <value>
                <fullName>Response: SLA violation escalation to L1</fullName>
            </value>
            <value>
                <fullName>Response: SLA violation escalation to L2</fullName>
            </value>
            <value>
                <fullName>Resolution: Warning of upcoming SLA violation</fullName>
            </value>
            <value>
                <fullName>Resolution: SLA Violation</fullName>
            </value>
            <value>
                <fullName>Resolution: SLA violation escalation to L1</fullName>
            </value>
            <value>
                <fullName>Resolution: SLA violation escalation to L2</fullName>
            </value>
            <value>
                <fullName>Resolution Warning</fullName>
                <isActive>false</isActive>
                <label>Resolution Warning</label>
            </value>
            <value>
                <fullName>Resolution L1</fullName>
                <isActive>false</isActive>
                <label>Resolution L1</label>
            </value>
            <value>
                <fullName>Resolution L2</fullName>
                <isActive>false</isActive>
                <label>Resolution L2</label>
            </value>
            <value>
                <fullName>Resolution Violation</fullName>
                <isActive>false</isActive>
                <label>Resolution Violation</label>
            </value>
            <value>
                <fullName>Response L1</fullName>
                <isActive>false</isActive>
                <label>Response L1</label>
            </value>
            <value>
                <fullName>Response L2</fullName>
                <isActive>false</isActive>
                <label>Response L2</label>
            </value>
            <value>
                <fullName>Response Violation</fullName>
                <isActive>false</isActive>
                <label>Response Violation</label>
            </value>
            <value>
                <fullName>Response Warning</fullName>
                <isActive>false</isActive>
                <label>Response Warning</label>
            </value>
            <value>
                <fullName>Response Warning</fullName>
                <isActive>false</isActive>
                <label>Response Warning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>