force-app/main/default/objects/Case/fields/Missed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Missed_SLA__c</fullName>
    <description>Set by Entitlement Process</description>
    <label>Missed SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>