force-app/main/default/objects/Case/fields/Missed_SLA_old2__c.field-meta.xml
<CustomField>
    <fullName>Missed_SLA_old2__c</fullName>
    <description>Removed close condition - JU 2/22/24
If Status = Closed, and ClosedDate &gt; Due Date, then 1 else 0</description>
    <formula>IF(ClosedDate &gt; Innova_Due_Date__c ,1,0)</formula>
    <label>Missed SLA - old2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>