force-app/main/default/objects/Case/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>IF(Left(OwnerId,3) = &apos;005&apos;  ,  Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName ,  Owner:Queue.QueueName )</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>