force-app/main/default/objects/Case/fields/Owner_Unassigned__c.field-meta.xml
<CustomField>
    <fullName>Owner_Unassigned__c</fullName>
    <description>Shows unassigned if unassigned, or owner name</description>
    <formula>If( BEGINS(OwnerId , &apos;00G&apos;), &apos;Unassigned&apos;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner / Unassigned</label>
    <type>Text</type>
</CustomField>