force-app/main/default/objects/Case/fields/Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status__c</fullName>
    <label>Pending Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Pending 3rd party</fullName>
            </value>
            <value>
                <fullName>Pending development</fullName>
            </value>
            <value>
                <fullName>Pending user reply</fullName>
            </value>
            <value>
                <fullName>Waiting equipment return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>