force-app/main/default/objects/Case/fields/Public_Group_Emails__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Emails__c</fullName>
    <label>Public Group Emails</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>