force-app/main/default/objects/Case/fields/Rich_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Area__c</fullName>
    <label>Rich Text Area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>