force-app/main/default/objects/Case/fields/Shipping_Information__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Information__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Shipping Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>