force-app/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Formula - SLA Breached/Met</description>
    <formula>IF(  Missed_SLA__c  = 1, &quot;Breached&quot;, &quot;Met&quot;)</formula>
    <label>SLA</label>
    <type>Text</type>
</CustomField>