force-app/main/default/objects/Case/fields/Source_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_ID__c</fullName>
    <label>Source Email ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>