force-app/main/default/objects/Case/fields/Status_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Status_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Resolved</label>
    <type>Checkbox</type>
</CustomField>