force-app/main/default/objects/Case/fields/Termination_Effective_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Termination_Effective_Date_Time__c</fullName>
    <label>Termination Effective Date Time</label>
    <type>DateTime</type>
</CustomField>