force-app/main/default/objects/Case/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>