force-app/main/default/objects/Case/fields/wkdw__TicketCategory__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TicketCategory__c</fullName>
    <description>The type of ticket. Available on the new ticket form when more than one category exists. 
        
        The API name values of this field must match the values of the names on the custom metadata record (Name__c on TicketCategoryDefinition__mdt).</description>
    <label>Ticket Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>