force-app/main/default/objects/Case/fields/wkitsm__BackoutTime__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__BackoutTime__c</fullName>
    <description>The outage and effort to backout this change.</description>
    <inlineHelpText>The outage and effort to backout this change.</inlineHelpText>
    <label>Backout Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Less Than 1 Hour Outage with Minimal Reversal Time</fullName>
            </value>
            <value>
                <fullName>More Than 1 Hour Outage with Significant Reversal Time</fullName>
            </value>
            <value>
                <fullName>No Backout Option</fullName>
            </value>
            <value>
                <fullName>No Outage and Less Than 1 Hour</fullName>
                <default>true</default>
                <label>No Outage and Less Than 1 Hour</label>
            </value>
            <value>
                <fullName>No Outage and More Than 1 Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>