force-app/main/default/objects/Case/fields/wkitsm__Benefits__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Benefits__c</fullName>
    <label>Benefits</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>