force-app/main/default/objects/Case/fields/wkitsm__BusinessRisks__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__BusinessRisks__c</fullName>
    <label>Business Risks</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>