force-app/main/default/objects/Case/fields/wkitsm__CabNote__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__CabNote__c</fullName>
    <label>CAB Note</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>