force-app/main/default/objects/Case/fields/wkitsm__Category__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>wkitsm__ServiceProvider__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>wkitsm__Category</valueSetName>
    </valueSet>
</CustomField>