force-app/main/default/objects/Case/fields/wkitsm__ChangeDescription__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ChangeDescription__c</fullName>
    <label>Change Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>