force-app/main/default/objects/Case/fields/wkitsm__ChangeEffort__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ChangeEffort__c</fullName>
    <label>Change Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>