force-app/main/default/objects/Case/fields/wkitsm__ChangeOwner__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ChangeOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChangeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>