force-app/main/default/objects/Case/fields/wkitsm__ChangePlan__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ChangePlan__c</fullName>
    <label>Change Plan</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>