force-app/main/default/objects/Case/fields/wkitsm__DeploymentPlan__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DeploymentPlan__c</fullName>
    <description>Deployment plan</description>
    <label>Deployment Plan</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>