force-app/main/default/objects/Case/fields/wkitsm__Diagnostics__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Diagnostics__c</fullName>
    <label>Diagnostics</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>