force-app/main/default/objects/Case/fields/wkitsm__DueDate__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__DueDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>