force-app/main/default/objects/Case/fields/wkitsm__EscalationReason__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__EscalationReason__c</fullName>
    <description>Reason for escalation.</description>
    <label>Escalation Reason</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>