force-app/main/default/objects/Case/fields/wkitsm__ExpectedOutage__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ExpectedOutage__c</fullName>
    <description>The expected service outage resulting from this change.</description>
    <inlineHelpText>The expected service outage resulting from this change.</inlineHelpText>
    <label>Expected Outage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2 to 3 Hours</fullName>
            </value>
            <value>
                <fullName>3 to 5 Hours</fullName>
            </value>
            <value>
                <fullName>Less Than 2 Hours</fullName>
            </value>
            <value>
                <fullName>More Than 5 Hours</fullName>
            </value>
            <value>
                <fullName>No Outage</fullName>
                <default>true</default>
                <label>No Outage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>