force-app/main/default/objects/Case/fields/wkitsm__FinancialRisk__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__FinancialRisk__c</fullName>
    <label>Financial Risk</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>