force-app/main/default/objects/Case/fields/wkitsm__Impact__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Impact__c</fullName>
    <inlineHelpText>Impact describes how many people are affected.
Individual - Single user.
Team - Multiple users.
Department - Significant / Large.
Global - Extensive / Wide spread.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Department</fullName>
                <label>Team</label>
            </value>
            <value>
                <fullName>Business Unit</fullName>
                <label>Department</label>
            </value>
            <value>
                <fullName>Company</fullName>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>