force-app/main/default/objects/Case/fields/wkitsm__ImpactDetails__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ImpactDetails__c</fullName>
    <label>Impact Details</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>