force-app/main/default/objects/Case/fields/wkitsm__KnownError__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__KnownError__c</fullName>
    <label>Known Error</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>