force-app/main/default/objects/Case/fields/wkitsm__LevelOfTesting__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__LevelOfTesting__c</fullName>
    <description>The level of testing completed for the submitted change.</description>
    <inlineHelpText>The level of testing completed for the submitted change.</inlineHelpText>
    <label>Level of Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>Unit Test, QA, and UAT</fullName>
                <default>true</default>
                <label>Unit Test, QA, and UAT</label>
            </value>
            <value>
                <fullName>Unit Test and QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>