force-app/main/default/objects/Case/fields/wkitsm__MajorIncident__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__MajorIncident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Incident</label>
    <type>Checkbox</type>
</CustomField>