force-app/main/default/objects/Case/fields/wkitsm__MajorIncidentManager__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__MajorIncidentManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User which is a part of Major Incidents Manager group</description>
    <label>Major Incident Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>