force-app/main/default/objects/Case/fields/wkitsm__ManagementAssessments__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ManagementAssessments__c</fullName>
    <label>Management Assessments</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>