force-app/main/default/objects/Case/fields/wkitsm__ManualPriority__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ManualPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually override the Priority</description>
    <inlineHelpText>Enable the option to select a value for the Priority field. When disabled, the Priority value is calculated based on the values of the Impact and Urgency fields.</inlineHelpText>
    <label>Manual priority</label>
    <type>Checkbox</type>
</CustomField>