force-app/main/default/objects/Case/fields/wkitsm__NumberOfTeams__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__NumberOfTeams__c</fullName>
    <description>The number of teams needed to execute a change.</description>
    <inlineHelpText>The number of teams needed to execute a change.</inlineHelpText>
    <label>Number of Teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>