force-app/main/default/objects/Case/fields/wkitsm__OpenTaskCount__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__OpenTaskCount__c</fullName>
    <label>Open Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>