force-app/main/default/objects/Case/fields/wkitsm__PlannedEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__PlannedEndDateTime__c</fullName>
    <description>Change planned end date and time</description>
    <label>Planned End Date Time</label>
    <type>DateTime</type>
</CustomField>