force-app/main/default/objects/Case/fields/wkitsm__PlannedStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__PlannedStartDateTime__c</fullName>
    <description>Change planned start date and time</description>
    <label>Planned Start Date Time</label>
    <type>DateTime</type>
</CustomField>