force-app/main/default/objects/Case/fields/wkitsm__PreviousQueue__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__PreviousQueue__c</fullName>
    <label>Previous Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>