force-app/main/default/objects/Case/fields/wkitsm__PrimaryCI__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__PrimaryCI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Configuration Item</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cases with this as Primary CI</relationshipLabel>
    <relationshipName>PrimaryCICases</relationshipName>
    <type>Lookup</type>
</CustomField>