force-app/main/default/objects/Case/fields/wkitsm__PriorExperience__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__PriorExperience__c</fullName>
    <description>Previous experience with success of change.</description>
    <inlineHelpText>Previous experience with success of change.</inlineHelpText>
    <label>Prior Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No Experience</fullName>
                <default>true</default>
                <label>No Experience</label>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Successful After Issues</fullName>
                <label>Successful with Issues</label>
            </value>
            <value>
                <fullName>Unsuccessful After Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>