force-app/main/default/objects/Case/fields/wkitsm__ProblemManager__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ProblemManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProblemCases</relationshipName>
    <type>Lookup</type>
</CustomField>