force-app/main/default/objects/Case/fields/wkitsm__ProblemSource__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ProblemSource__c</fullName>
    <label>Problem Source</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>