force-app/main/default/objects/Case/fields/wkitsm__ReportedBy__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ReportedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>ReportedCases</relationshipName>
    <type>Lookup</type>
</CustomField>