force-app/main/default/objects/Case/fields/wkitsm__ReportedDateTime__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ReportedDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Reported Date Time</label>
    <type>DateTime</type>
</CustomField>