force-app/main/default/objects/Case/fields/wkitsm__ResolutionDetails__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ResolutionDetails__c</fullName>
    <label>Resolution Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>