force-app/main/default/objects/Case/fields/wkitsm__ResolutionType__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ResolutionType__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Task Completed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Information Shared</fullName>
                <isActive>false</isActive>
                <label>Information Shared</label>
            </value>
            <value>
                <fullName>Known Error</fullName>
                <isActive>false</isActive>
                <label>Known Error</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Resolution Found</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
            <value>
                <fullName>User Cancelled</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
                <isActive>false</isActive>
                <label>User Error</label>
            </value>
            <value>
                <fullName>Workaround Accepted</fullName>
                <isActive>false</isActive>
                <label>Workaround Accepted</label>
            </value>
            <value>
                <fullName>Workaround Declined</fullName>
                <isActive>false</isActive>
                <label>Workaround Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>