force-app/main/default/objects/Case/fields/wkitsm__Resources__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Resources__c</fullName>
    <label>Resources</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>