force-app/main/default/objects/Case/fields/wkitsm__RiskDetails__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__RiskDetails__c</fullName>
    <description>Risk Details</description>
    <label>Risk Details</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>