force-app/main/default/objects/Case/fields/wkitsm__RiskMitigation__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__RiskMitigation__c</fullName>
    <label>Risk Mitigation</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>