force-app/main/default/objects/Case/fields/wkitsm__RiskScore__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__RiskScore__c</fullName>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>