force-app/main/default/objects/Case/fields/wkitsm__RollbackPlan__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__RollbackPlan__c</fullName>
    <label>Rollback Plan</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>