force-app/main/default/objects/Case/fields/wkitsm__RootCause__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__RootCause__c</fullName>
    <description>Problem Root Cause Analysis</description>
    <label>Root Cause</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>