force-app/main/default/objects/Case/fields/wkitsm__Scope__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Scope__c</fullName>
    <label>Scope</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>