force-app/main/default/objects/Case/fields/wkitsm__ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__ServiceProvider__c</fullName>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>wkitsm__ServiceProvider</valueSetName>
    </valueSet>
</CustomField>