force-app/main/default/objects/Case/fields/wkitsm__Source__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>