force-app/main/default/objects/Case/fields/wkitsm__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>wkitsm__Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>wkitsm__Subcategory</valueSetName>
    </valueSet>
</CustomField>