force-app/main/default/objects/Case/fields/wkitsm__SubmissionDetails__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__SubmissionDetails__c</fullName>
    <label>Submission Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>