force-app/main/default/objects/Case/fields/wkitsm__Symptoms__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__Symptoms__c</fullName>
    <label>Symptoms</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>