force-app/main/default/objects/Case/fields/wkitsm__TeamNotifiedTime__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__TeamNotifiedTime__c</fullName>
    <label>TeamNotifiedTime</label>
    <type>DateTime</type>
</CustomField>