force-app/main/default/objects/Case/fields/wkitsm__TechnicalRisk__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__TechnicalRisk__c</fullName>
    <label>Technical Risk</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>