force-app/main/default/objects/Case/fields/wkitsm__TestPlan__c.field-meta.xml
<CustomField>
    <fullName>wkitsm__TestPlan__c</fullName>
    <label>Test Plan</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>